2011-10-11  Ryosuke Niwa  <rniwa@webkit.org>

        Chromium build fix attempt after r97202.

        * tests/PopupMenuTest.cpp:
        (WebKit::SelectPopupMenuTest::boundingBoxRect):

2011-10-11  Fady Samuel  <fsamuel@chromium.org>

        Towards making PopupMenuClient more testable
        https://bugs.webkit.org/show_bug.cgi?id=69631

        Reviewed by Simon Fraser.

        * src/AutofillPopupMenuClient.cpp:
        (WebKit::AutofillPopupMenuClient::boundingBoxRect):
        * src/AutofillPopupMenuClient.h:
        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::applyAutofillSuggestions):

2011-10-11  Dominic Mazzoni  <dmazzoni@google.com>

        WebAccessibilityObject needs titleUIElement
        https://bugs.webkit.org/show_bug.cgi?id=69869

        Reviewed by Dimitri Glazkov.

        * public/WebAccessibilityObject.h:
        * src/WebAccessibilityObject.cpp:
        (WebKit::WebAccessibilityObject::titleUIElement):

2011-10-10  Adam Klein  <adamk@chromium.org>

        [MutationObservers] Add stub implementation of WebKitMutationObserver
        https://bugs.webkit.org/show_bug.cgi?id=68949

        Reviewed by Ryosuke Niwa, Oliver Hunt, and Dimitri Glazkov.

        * features.gypi: Added 'enable_mutation_observers' variable.

2011-10-11  Mike Reed  <reed@google.com>

        re-add support for GDI text behind a compile flag
        https://bugs.webkit.org/show_bug.cgi?id=69530

        Reviewed by James Robinson.

        * features.gypi:

2011-10-11  Pavel Podivilov  <podivilov@chromium.org>

        Unreviewed, roll chromium revision to pick HTML speech input images update.

        * DEPS:

2011-10-11  Antoine Labour  <piman@chromium.org>

        Expose WebLayer::isNull
        https://bugs.webkit.org/show_bug.cgi?id=69813

        Reviewed by Darin Fisher.

        * public/WebLayer.h:
        (WebKit::WebLayer::isNull):

2011-10-10  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r97087.